# ch-alf-stat

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
app/: main.py
app/api/: __init__.py  handler.py
app/api/route/: __init__.py
app/api/route/general/: __init__.py  health.py  ping.py
app/api/schema/general/: health.py  ping.py
app/config/: __init__.py
deploy/: Dockerfile
doc/: VARIABLES.md
script/: bertopic.py  run_clustering.py  topic_modeling.py
src/: embedder.py  llm.py  log_handler.py  model.py  topic_model.py  utils.py
src/clustering/: __init__.py  cluster.py  clustering.py  hdbscan.py  hybrid.py  hybrid_cluster.py  utils.py
test/: test_ping.py
