[project]
name = "python-boilerplate"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddtrace>=2.18.1",
    "fastapi[standard]>=0.115.4",
    "pydantic-settings>=2.7.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.1",
    "pytest-xdist>=3.6.1",
    "ruff>=0.8.6",
]
ops = [
    "sentry-sdk>=2.19.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
addopts = [
    # Allow test files to have the same name in different directories.
    "--import-mode=importlib",
]
