[project]
name = "ch-alf-stat"
authors = [{name="Day", email="day@channel.io"}]
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddtrace>=2.18.1",
    "fastapi[standard]>=0.115.4",
    "numpy>=2.0.0",
    "pydantic-settings>=2.7.1",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
    "tritonclient[grpc]>=2.46.0",
    "numba==0.60.0",
    "umap-learn>=0.5.5",
    "nest-asyncio>=1.6.0",
    "torch>=2.6.0",
    "bertopic>=0.17.0",
    "pymongo>=4.11.3",
    "openai>=1.69.0",
    "google-genai>=1.8.0",
    "matplotlib>=3.10.1",
    "river>=0.22.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.1",
    "pytest-xdist>=3.6.1",
    "ruff>=0.8.6",
]
ops = [
    "sentry-sdk>=2.19.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
addopts = [
    # Allow test files to have the same name in different directories.
    "--import-mode=importlib",
]
